--- a/05/05.html
+++ b/05/05.html
@@ -10,16 +10,16 @@
     </style>
 </head>
 <body>
-    <div id="wrap"></div>
+    <div id="wrap">jj</div>
     <script>
         //+号运算时  两边任意一边有字符串，那么都会进行隐式字符串转换，再进行拼接
         // - / * % 都会装换成数字再进行运算
         //出现不合理的运算之后，会出现NaN（not a number） NaN不是一个数字，但是属于数字类型
         //布尔值和number进行运算时会将true转换为1，false转换为0
-        console.log(true + 1 );
-        console.log(false + 1 );
-        let oWrap = document.getElementById("wrap");
-        console.log(oWrap);
+        // console.log(true + 1 );
+        // console.log(false + 1 );
+        // let oWrap = document.getElementById("wrap");
+        // console.log(oWrap);
         // oWrap.innerHTML = " <ul>" +
         //                 "<li></li>"
         //                  "</ul> ";
@@ -31,7 +31,7 @@
             let oStyle = oWrap.style;
             oStyle.width = "100px";
         */
-
+        document.getElementById("wrap").innerHTML = "123";    
 
     </script>
 </body>
